--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <body>
   <canvas width="500" height="300" id="stage"></canvas>
   <div class="info">
-    <p>Use H L to move, B to buy ammor and SPACE or D to open fire</p>
+    <p>Use H L to move, B to buy ammo and SPACE or D to open fire</p>
   </div>
   <script src="Utils.js" charset="utf-8"></script>
   <script src="GameEngine.js" charset="utf-8"></script>
   <script src="GameObject.js" charset="utf-8"></script>
   <script src="Bullet.js" charset="utf-8"></script>
-  <script src="TextAmmor.js" charset="utf-8"></script>
+  <script src="TextAmmo.js" charset="utf-8"></script>
   <script src="TextCache.js" charset="utf-8"></script>
   <script src="Player.js" charset="utf-8"></script>
   <script src="Enemy.js" charset="utf-8"></script>
