--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       font-family: Arial;
     }
     canvas {
-
       margin: 0 auto;
       border: 1px solid #444;
       display: block;
       background: #000;
+      width: 50%;
     }
     .info {
       text-align: center;
@@ -28,6 +28,7 @@
   </div>
   <script src="Utils.js" charset="utf-8"></script>
   <script src="GameEngine.js" charset="utf-8"></script>
+  <script src="GameZone.js" charset="utf-8"></script>
   <script src="GameObject.js" charset="utf-8"></script>
   <script src="Bullet.js" charset="utf-8"></script>
   <script src="TextAmmo.js" charset="utf-8"></script>
