--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       border: 1px solid #444;
       display: block;
       background: #000;
-      /*width: 50%;*/
+      width: 70%;
     }
     .info {
       text-align: center;
