--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <canvas width="500" height="300" id="stage"></canvas>
   <div class="info">
-    <p>Working in progress yet!</p>
+    <p>Working on it yet!</p>
     <p>Use H L to move, B to buy ammo and SPACE or D to open fire</p>
     <p>Sprites from <a href="http://opengameart.org/" target="_blank">http://opengameart.org/</a></p>
   </div>
